--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -577,7 +577,7 @@ button:hover {
         // Отправляем запрос на сервер
 
         // fetch('https://calc1-2.onrender.com/radar-chart', {
-            fetch('http://localhost:8080/radar-chart', {
+            fetch('https://kushnikov1-2.onrender.com/radar-chart', {
 			method: 'POST',
 			headers: {
 				'Content-Type': 'application/json',
