--- a/src/main/resources/static/lab2.html
+++ b/src/main/resources/static/lab2.html
@@ -569,7 +569,7 @@ button:hover {
 
 
         // fetch('https://calc1-2.onrender.com/npz-chart', {
-            fetch('http://localhost:8080/npz-chart', {
+            fetch('https://kushnikov1-2.onrender.com/npz-chart', {
 			method: 'POST',
 			headers: {
 				'Content-Type': 'application/json',
